examples/pos/lexical_capability_selection_existential.effekt
module lexical_capability_selection_existential

interface Greet[T] { def sayHello[R](): R }

def helloWorld() = try {
  do sayHello()
} with Greet[Int] {
  def sayHello[R]() = { println("Hello world!") }
}
def main() = helloWorld()