examples/neg/handler_operation_annotation.effekt
interface Reader { def read(): String }

def main() = {
  try {
    do read()
  } with Reader {
    def read(): String = "Hello, world!"
  }
}